# git-export

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
git_export/: __init__.py  __main__.py  spec.py
